# t2d-baseline-paper

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej  requirements.txt  shap_example.py  src-requirements.txt  tasks.py  tasks.py.rej
.github/: dependabot.yml
.github/workflows/: cruft.yml  pre-commit.yml  release.yml  release.yml.rej  static_type_checks.yml  tests.yml
.zen/: config.yaml
application/: config.py  main.py  try_snoozing.py
application/data/: data_loaders.py
application/figures/: roc_curve.py  shap_values.py
application/loaders/: data.py
application/pipelines/: confusion_matrix_pipeline.py  descriptive_stats_table_pipeline.py  examine_flattened_ds.py  precision_recall_pipeline.py  roc_curve.py  run_psycop_eval_class.py  shap_pipeline.py  train_single_model.py  try_snoozing.py
application/pipelines/figure_2/: incidence_by_time_until_diagnosis.py  sensitivity_by_time_to_event_pipeline.py
application/pipelines/performance/: confusion_matrix_pipeline.py  incidence_by_time_until_diagnosis.py  precision_recall_pipeline.py  roc_auc_pipeline.py  sensitivity_by_time_to_event_pipeline.py
application/pipelines/robustness/: create_robustness_grid.py  robustness_by_age.py  robustness_by_calendar_time.py  robustness_by_cyclic_time.py  robustness_by_n_hba1c.py  robustness_by_sex.py  robustness_by_time_from_first_visit.py  robustness_by_time_to_event.py
application/pipelines/tables/: descriptive_stats.py  features.py  prediction_times.py
application/pipelines/tables/descriptive_stats/: descriptive_stats.py
docs/: conf.py  faq.md  index.md  installation.md
docs/api/: docs_example.md
outputs_for_publishing/keynote-figures/: figure-1.key  figure-2.key
src/data/: load_eval_dataset.r
src/figures/: roc_curve.rmd
src/t2d/: main.py
src/t2d/evaluation/: best_runs.py  config.py  examine_run_performance.py  run_all.py
src/t2d/evaluation/data_loaders/: best_runs.py  get_eval_dataset.py
src/t2d/evaluation/dataset_description/table_one/: table_one.py
src/t2d/evaluation/feature_importance/shap/: main.py  shap_plot.py
src/t2d/evaluation/figures/shap/: shap_plot.py
src/t2d/evaluation/performance/: binarised_features.py  confusion_matrix_pipeline.py  incidence_by_time_until_diagnosis.py  only_hba1c.py  performance_by_ppr.py  precision_recall_pipeline.py  roc_auc_pipeline.py  run_performance_in_group.py  sensitivity_by_time_to_event_pipeline.py  test_binarised_features.py
src/t2d/evaluation/robustness/: full_robustness_eval.py  robustness_by_age.py  robustness_by_calendar_time.py  robustness_by_cyclic_time.py  robustness_by_n_hba1c.py  robustness_by_sex.py  robustness_by_time_from_first_visit.py
src/t2d/evaluation/tables/descriptive_stats/: descriptive_stats.py
src/t2d/feature_generation/: describe_features.py  flattened_dataset_description.py  get_eligible_prediction_times.py  get_eligible_prediction_times_refactored.py  main.py  specify_features.py
src/t2d/feature_generation/eligible_prediction_times/: combined_filters.py  loader.py  main.py  single_filters.py  tooling.py
src/t2d/feature_generation/outcome_specification/: combined.py
src/t2d/model_training/: run_best_model_on_test_set.py  run_performance_in_group.py  train_model_from_application_module.py  train_models_in_parallel.py
src/t2d/model_training/config/data/: default_data.yaml
src/t2d/model_training/config/preprocessing/: default_preprocessing.yaml
src/t2d/paper_outputs/: config.py  run_all.py  run_best_model_on_test_set.py
src/t2d/paper_outputs/dataset_description/: describe_features.py  features.py  incidence_by_time.py
src/t2d/paper_outputs/dataset_description/table_one/: table_one.py
src/t2d/paper_outputs/model_description/performance/: binarised_features.py  boolean_features.py  confusion_matrix_pipeline.py  incidence_by_time_until_diagnosis.py  only_hba1c.py  performance_by_ppr.py  precision_recall_pipeline.py  (+3 more)
src/t2d/paper_outputs/model_permutation/: boolean_features.py  only_hba1c.py
src/t2d/paper_outputs/model_selection/: performance_by_lookahead_by_model_type.py
src/t2d/utils/: best_runs.py  cache.py  feature_name_to_readable.py  test_feature_name_to_readable.py
src/t2d_baseline_paper/: best_runs.py  examine_run_performance.py  feature_name_to_readable.py  globals.py  snoozing.py
src/t2d_baseline_paper/data/: get_train_split.py  load_dev_data.py  load_true_data.py  test_eval_data.py
src/t2d_baseline_paper/data_loaders/: load_true_data.py
src/t2d_baseline_paper/figures/: roc_curve.py  roc_curve.rmd
src/t2d_baseline_paper/figures/shap/: generate_shap_values.py  shap_plot.py
src/t2d_baseline_paper/steps/: get_train_split.py  model_evaluator.py  pipeline_loader.py
src/t2d_baseline_paper/tables/: descriptive_stats.py
t2d/evaluation/: best_runs.py  config.py  examine_run_performance.py  feature_name_to_readable.py  shap_pipeline.py  try_snoozing.py
t2d/evaluation/data_loaders/: load_true_data.r
t2d/evaluation/dataset_description/: descriptive_stats.py  features.py
t2d/evaluation/feature_importance/shap/: main.py  shap_plot.py
t2d/evaluation/figures/: roc_curve.py
t2d/evaluation/figures/shap/: generate_shap_values.py  shap_plot.py
t2d/evaluation/performance/: confusion_matrix_pipeline.py  incidence_by_time_until_diagnosis.py  precision_recall_pipeline.py  roc_auc_pipeline.py  sensitivity_by_time_to_event_pipeline.py
t2d/evaluation/robustness/: robustness_by_age.py  robustness_by_calendar_time.py  robustness_by_cyclic_time.py  robustness_by_n_hba1c.py  robustness_by_sex.py  robustness_by_time_from_first_visit.py
t2d/evaluation/snoozing/: try_snoozing.py
t2d/evaluation/tables/: features.py
t2d/evaluation/tables/descriptive_stats/: descriptive_stats.py
t2d/evaluation/tests/: test_feature_name_to_readable.py
t2d/feature_generation/: get_eligible_prediction_times_refactored.py  main.py  specify_features.py
t2d/model_training/: train_models_in_parallel.py
tests/: first_test.py  test_feature_name_to_readable.py
(+26 files in other folders)
