[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "t2d"
version = "0.0.1"
description = "T2D baseline paper"
authors = [
  {name = "Martin Bernstorff", email = "martinbernstorff@gmail.com"}
]
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.4.3,<1.5.0",
  # Shap dependencies
  "shap>=0.41.0",
  "ipython>=7.10.0",
  "timeseriesflattener",
  "psycopmlutils",
  "pydantic",
  "seaborn",
  "polars",
  "tableone",
  "deepchecks==0.13.1",
  "optuna==2.10.1",
  "hydra-optuna-sweeper==1.2.0"
]

[project.license]
file = "LICENSE"
name = "MIT"

[project.optional-dependencies]
dev = [
  "cruft",
  "black",
  "pre-commit==2.20.0,<2.21.0",
  "ruff==0.0.254", # important that these match the pre-commit hooks
  "black==22.8.0", # important that these match the pre-commit hooks
  "black[jupyter]==22.8.0",
  "pandas-stubs",
  "invoke"
]
type = [
  "pyright",
  "pyright-polite"
]
tests = [
  "pytest>=7.1.3,<7.3.0",
  "pytest-cov>=3.0.0,<3.1.0",
  "pytest-xdist>=3.0.0,<3.2.0",
  "pytest-sugar>=0.9.4,<0.10.0",
  "tox"
]
src = [
  "psycop @ git+https://github.com/Aarhus-Psychiatry-Research/psycop-common.git@v0.61.0"
]

[project.urls]
homepage = "https://github.com/MartinBernstorff/t2d-baseline-paper"
repository = "https://github.com/MartinBernstorff/t2d-baseline-paper"
documentation = "https://MartinBernstorff.github.io/t2d-baseline-paper/"

[tool.coverage.run]
omit = [
  "**/tests/*",
  "**/_vendorized/*",
  "**/about.py"
]
exclude_lines = [
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __unicode__",
  "def __repr__",
  "if self.debug",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:"
]

[tool.pyright]
exclude = [".*venv*", ".tox", "src/psycop", "build"]
pythonPlatform = "Darwin"

[tool.pytest.ini_options]
markers = [
  "pre_push_test: Tests run on push. Should be as minimal as possible to maintain fast push speeds."
]
pythonpath = [
  "."
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W"
]
ignore = [
  "ANN101",
  "ANN401",
  "E402",
  "E501",
  "F401",
  "F841",
  "RET504"
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.semantic_release]
branch = "main"
version_variable = [
  "pyproject.toml:version"
]
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310}

[testenv:{test,type}]
extras = test, dev, src, type
use_develop = true
commands =
  test: pytest src/t2d -n auto {posargs:test}
  type: pyright src/t2d
  

[testenv:docs]
description: build docs
extras = docs
basepython = py39 # Setting these explicitly avoid recreating env if your shell is set to a different version
use_develop = true
commands =
  sphinx-build -b html docs docs/_build/html
"""
